# auto-README

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  analyzer.py  cli.py  generator.py
src/templates/: full.md.j2  minimal.md.j2
